# hosq

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  config.yml  run_ipfs.sh  rust-toolchain
.github/workflows/: build.yml  release.yml
ipfs-manager/: package.json  truffle-config.js
ipfs-manager/contracts/: ipfsManager.sol
ipfs-manager/migrations/: 2_ipfs_migration.js
ipfs-manager/test/: ipfs_manager.js
src/: db.rs  main.rs  yaml_parser.rs
src/routes/: cors.rs  handlers.rs  mod.rs  proxy.rs
src/services/: contract_watcher.rs  mod.rs  providers.rs
src/types/: config.rs  mod.rs  monitoring.rs
src/utils/: proxy.rs
worker/: Cargo.toml  Dockerfile  config.yaml  tables.sql
worker/src/: contract_watcher.rs  cors.rs  db.rs  handlers.rs  ipfs_watcher.rs  keep_alive.rs  main.rs  providers.rs  yaml_parser.rs
worker/src/abi/: abi.json
worker/src/types/: config.rs  db.rs  errors.rs  mod.rs
